# Arithmetic-Calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Constants.h  Lexer.h  Parser.h  Token.h  UserHandler.h
include/nodes/: Division.h  INode.h  Multiplication.h  Subtraction.h  Sum.h  Value.h  Variable.h
src/: Lexer.cpp  Parser.cpp  UserHandler.cpp  main.cpp
src/nodes/: Division.cpp  Multiplication.cpp  Subtraction.cpp  Sum.cpp  Value.cpp  Variable.cpp
tests/: TestParser.cpp  TestSum.cpp
